--- a/Sigma-Wolf.html
+++ b/Sigma-Wolf.html
@@ -6,7 +6,7 @@
 
     <body>
         <div class="container">
-            <img id = "Sigma Wolf" src = "C:\Users\Hudson\OneDrive\Desktop\Everything\Coding\Sigma-Wolf\Sigma wolf.jpg" alt="Cool Sigma Wolf Riding A Bike">
+            <img id = "Sigma Wolf" src = "Sigma wolf.jpg" alt="Cool Sigma Wolf Riding A Bike">
             <h3>What are some tuff things about me?</h3>
             <ul>
                 <li>I'm a 6'4 nonchalant dread head</li>
